--- a/src/assets/themes/default/components/app-menu/app-menu.css
+++ b/src/assets/themes/default/components/app-menu/app-menu.css
@@ -1,3 +1,15 @@
 a{
-  color:yellow;
+  color:#000000;
+}
+
+:host{
+  width: 100%;
+}
+
+.navbar {
+padding:.5rem 1rem .5rem 0rem;
+}
+
+.navbar-brand{
+  padding: 5px;
 }
