--- a/src/components/app-root/app-root.css
+++ b/src/components/app-root/app-root.css
@@ -1,10 +1,44 @@
-header {
-  background: #5851ff;
-  color: white;
-  height: 56px;
+div.global_container{
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  justify-content: flex-start;
+  height: 100%;
+  background-color: #f8f9fc;
+}
+aside {
+  height:100%;
+  background-color: #4e73df;
+  background-image: linear-gradient(180deg,#4e73df 10%,#224abe 100%);
+  color: white;
+  align-items: flex-start;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  order:1;
+  flex: 1;
+  min-width: 200px;
+  display: flex;
+  flex-direction: column;
+}
+nav{
+  width:100%;
+  height: 4.375rem;
+  background-color: #fff!important;
+  box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15)!important;
+}
+
+.nav-footer{
+  text-align: center;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  background: #142b86;
+  font-size: 85%;
+}
+app-menu{
+flex-grow: 1;
+}
+
+psk-user-profile{
+  flex-direction: column;
 }
 
 h1 {
@@ -12,4 +46,9 @@ h1 {
   font-weight: 500;
   color: #fff;
   padding: 0 12px;
+}
+
+section{
+order:2;
+flex: 8;
 }
