--- a/src/components/renderers/menu-renderers/sidebar-renderer/sidebar-renderer.css
+++ b/src/components/renderers/menu-renderers/sidebar-renderer/sidebar-renderer.css
@@ -1,4 +1,5 @@
 @import url(../../../../assets/fonts/fontawesome/font-awesome.min.css);
+@import url(../../../../assets/css/bootstrap/css/bootstrap.min.css);
 
 :host{
   width:100%;
@@ -9,7 +10,7 @@
 }
 
 span.icon{
-  color: rgba(255,255,255,.8);
+  color: rgba(255,255,255,.6);
   margin-right: 10px;
 }
 
@@ -33,30 +34,79 @@ span.icon{
   border-top: 1px solid rgba(255,255,255,.15);
 }
 
-a{
-  color: rgba(255,255,255,.8);
+a,
+a span.icon,
+.item_container .item_name
+{
+  color: rgba(255,255,255,.7);
   text-decoration: none;
   font-size: 0.9rem;
   cursor: pointer;
 }
 
-a.active {
+a.active,
+.dropdown.isOpened > .item_container > .item_name {
   font-weight: 700;
-  color:#FFF;
 }
+
+a:hover,
+.item_container:hover > .item_name,
+.item_container:hover > span.icon,
+.dropdown.active > .wrapper_container > .item_container > span.icon,
+.dropdown.isOpened > .wrapper_container > .item_container > span.icon,
+.dropdown.active > .wrapper_container > .item_container > span.item_name,
+.dropdown.isOpened > .wrapper_container > .item_container > span.item_name,
+a:hover span.icon,
+a.active .item_name,
 a.active span.icon{
-  color:#FFFFFF;
+  color: rgba(255,255,255,1);
 }
+
 
 .children{
   position:relative;
   display: none;
   padding-left: 10px;
+  padding-top: 20px;
 }
 
-:host([active]) div.children{
-  display: block;
+.children .wrapper_container{
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+.dropdown:hover{
+  cursor: pointer;
+}
+:host([active]) .children,
+.dropdown.active .wrapper_container > .children,
+.dropdown.isOpened .wrapper_container > .children{
+display: block;
+}
+
+.dropdown.isOpened .fa-caret-right.expand-menu,
+.dropdown.active .fa-caret-right.expand-menu{
+  transform: rotate(90deg);
 }
 
 
+:host([hamburger]) a div{
+  width:100%;
+}
 
+:host([hamburger]) div.children{
+
+  position: relative;
+  background: none;
+  top:0;
+  width:100%;
+}
+
+:host([hamburger]) div.children .item_container{
+  padding-left: 32px;
+}
+
+:host([hamburger]) .wrapper_container,
+:host([hamburger]) .dropdown{
+  width: 100%;
+}
