--- a/src/components/usages/general-css/general-css.css
+++ b/src/components/usages/general-css/general-css.css
@@ -1,3 +1,4 @@
+@import url("../../../assets/fonts/fontawesome/font-awesome.min.css");
 @import url("../../../assets/css/bootstrap/css/bootstrap.min.css");
 pre{
   overflow: hidden;
@@ -5,4 +6,7 @@ pre{
   background:#E9E9E9;
   white-space: pre-wrap;
   color:#005cbf;
+}
+header{
+  background: #005cbf;
 }
