--- a/src/components/app-root/app-root.css
+++ b/src/components/app-root/app-root.css
@@ -14,6 +14,7 @@ div.global_container.is-mobile{
 .is-mobile aside{
   width: 100%;
   height: auto;
+  overflow: inherit;
 }
 
 aside {
@@ -28,6 +29,7 @@ aside {
   min-width: 200px;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 nav{
   width:100%;
@@ -52,6 +54,8 @@ nav{
 section{
   display: flex;
   flex-direction: column;
+  height:100%;
+  overflow:hidden auto;
 }
 
 app-menu,
