--- a/src/pages/Components/app-menu/index.html
+++ b/src/pages/Components/app-menu/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://raw.githubusercontent.com/PrivateSky/pwc-apps/master/src/assets/css/main.css" rel="stylesheet"/>
+    <link href="https://privatesky.xyz/assets/css/main.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="card">
