--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,6 +1,6 @@
-@import url(../fonts/fontawesome/font-awesome.min.css);
-@import url(../fonts/nunito/nunito.css);
-@import url("/bootstrap/css/bootstrap.min.css");
+@import url("https://privatesky.xyz/assets/fonts/fontawesome/font-awesome.min.css");
+@import url("https://privatesky.xyz/assets/fonts/nunito/nunito.css");
+@import url("https://privatesky.xyz/assets/css/bootstrap/css/bootstrap.min.css");
 pre {
   overflow: hidden;
   padding: 10px;
