--- a/src/pages/Components/app-menu/index.html
+++ b/src/pages/Components/app-menu/index.html
@@ -1,9 +1,11 @@
-<psk-page>
+<psk-page title="Navigation menu">
 
   <toc-toc/>
 
   <psk-example>
-    <app-menu/>
+    <header>
+      <app-menu/>
+    </header>
   </psk-example>
 
   <psk-tag>
