--- a/src/pages/Components/app-menu/index.html
+++ b/src/pages/Components/app-menu/index.html
@@ -3,7 +3,7 @@
   <toc-toc/>
 
   <psk-example>
-    <header>
+    <header style="background: #005cbf;">
       <app-menu/>
     </header>
   </psk-example>
