update on pages structure

--- a/src/pages/Components/psk-page-not-found/index.html
+++ b/src/pages/Components/psk-page-not-found/index.html
@@ -1,5 +1,7 @@
 <psk-page title="psk-page-not-found">
-    <psk-tag>&lt;psk-page-not-found /&gt;</psk-tag>
+    <psk-tag>
+        <psk-page-not-found />
+    </psk-tag>
 
     <psk-description>
         <psk-card title="Description">
