Page not found is not static html page - removed psk-page-not-found-usage component

--- a/pages/Components/psk-page-not-found/index.html
+++ b/pages/Components/psk-page-not-found/index.html
@@ -1,7 +1,9 @@
-<psk-page title="psk-page-not-found" table-of-content-title="Page not found - Table Of Content">
+<psk-page title="psk-page-not-found">
     <psk-tag>
-        <psk-page-not-found />
+        <psk-page-not-found></psk-page-not-found>
     </psk-tag>
+
+    <psk-toc title="PSK - Page not Found - TOC"></psk-toc>
 
     <psk-description>
         <p>This component is intended to be used inside a router component, so when the user navigates to an unknown route, this component will be loaded.</p>
