--- a/pages/Components/psk-page-not-found/index.html
+++ b/pages/Components/psk-page-not-found/index.html
@@ -1,6 +1,7 @@
 <psk-page title="psk-page-not-found">
     <psk-tag>
-        <psk-page-not-found></psk-page-not-found>
+        <psk-page-not-found>
+      </psk-page-not-found>
     </psk-tag>
 
     <psk-toc title="PSK - Page not Found - TOC"></psk-toc>
