--- a/pages/Components/psk-list-feedbacks/index.html
+++ b/pages/Components/psk-list-feedbacks/index.html
@@ -15,17 +15,42 @@
         <p>For beggining you could send a <code>message</code> or an array of <code>message</code> which are separated
             in distinctive notifications(the <code>message</code> is not mandatory) and a <code>name</code> for each
             message(again,this is not mandatory).</p>
-        <br />
-        <p>The alerts are stackable and they will only show a specific number of them(only on toast type notifications).</p>
+            <psk-tag>
+                this.showFeedbackHandler.emit({ message: 'Example', name: 'Example-Name', type: 'toast' })
+            </psk-tag>
+        <p>The alerts are stackable and they will only show a specific number of them(only on toast type notifications).
+        </p>
         <p>When the <strong>X</strong> button is pressed(when a <code>Toast</code> pool is used) an
             event(<code>closeFeedback</code>) is triggered and the Application Controller should listen to this, so the
             toast can be closed within the controller.</p>
-            <p>As for the alert it has auto-close feature but it can also be closed by clicking on it!</p>
+        <p>As for the alert it has auto-close feature but it can also be closed by clicking on it!</p>
     </psk-description>
     <psk-chapter title="Supported properties">
         <psk-list-feedbacks data-define-props={true} />
     </psk-chapter>
+    <psk-chapter title="Event Parameters">
+
+    </psk-chapter>
     <psk-chapter title="HTML Children">
         <p>This component has no HTML children.</p>
+    </psk-chapter>
+
+    <psk-chapter title="Code Examples">
+        <psk-tag>
+            <psk-list-feedbacks messages-to-display={5} time-alive={5000} toast-renderer="my-toast-renderer"></psk-list-feedbacks>
+        </psk-tag>
+        <psk-tag>
+            <psk-list-feedbacks messages-to-display={5} time-alive={5000} alert-renderer="my-alert-renderer"
+                styleCustomisation="{{
+                toast: {
+                    header: {
+                        style:
+                        {
+                            color: 'red',
+                            backgroundColor: 'purple'
+                        }
+                    }
+                }"></psk-list-feedbacks>
+        </psk-tag>
     </psk-chapter>
 </psk-page>
