--- a/pages/Components/psk-app-router/index.html
+++ b/pages/Components/psk-app-router/index.html
@@ -11,11 +11,11 @@
             <code><i>configuration JSON file</i></code>.</p>
     </psk-description>
     <psk-chapter title="Supported properties">
-        <psk-app-router data-define-props={true} />
+        <psk-app-router data-define-props="true" />
         
     </psk-chapter>
     <psk-chapter title="Event Description">
-        <psk-app-router data-define-events={true} />
+        <psk-app-router data-define-events="true" />
     </psk-chapter>
     <psk-chapter title="Code Examples">
         <psk-tag>
