--- a/pages/Components/psk-list-feedbacks/index.html
+++ b/pages/Components/psk-list-feedbacks/index.html
@@ -26,7 +26,7 @@
         <p>As for the alert it has auto-close feature but it can also be closed by clicking on it!</p>
     </psk-description>
     <psk-chapter title="Supported properties">
-        <psk-list-feedbacks data-define-props={true} />
+        <psk-list-feedbacks data-define-props="true" />
     </psk-chapter>
     <psk-chapter title="Event Description">
         <psk-list-feedbacks data-define-events={true} />
