--- a/pages/Components/psk-page-not-found/index.html
+++ b/pages/Components/psk-page-not-found/index.html
@@ -22,7 +22,7 @@
     </psk-description>
 
     <psk-chapter title="Supported properties">
-        <psk-page-not-found data-define-props={true} />
+        <psk-page-not-found data-define-props="true" />
     </psk-chapter>
 
     <psk-chapter title="HTML Children">
