--- a/pages/Components/psk-app-router/index.html
+++ b/pages/Components/psk-app-router/index.html
@@ -20,10 +20,10 @@
     <psk-chapter title="Code Examples">
         <psk-tag>
             <psk-app-router historyType="browser" menuItems="[{
-                ' name': 'Home' , 'path' : '/home' , 'icon' : 'fa-home' , 'type' : 'route' , 'component' : 'app-home'
-                , 'exact' : true },{ 'name' : 'PSK Components' , 'path' : '/psk-components' , 'icon' : 'fa-bars' , 'type'
-                : 'abstract' , 'children' : [{ 'name' : 'App Menu' , 'path' : '/psk-components/app-menu' , 'component'
-                : 'app-menu-usage' , 'icon' : 'fa-bars' , 'type' : 'route' , 'exact' : true }] }]" />
+                name: Home , path : /home , icon : fa-home , type : route , component : app-home
+                , exact : true },{ name : PSK Components , path : /psk-components , icon : fa-bars , type
+                : abstract , children : [{ name : App Menu , path : /psk-components/app-menu , component
+                : app-menu-usage , icon : fa-bars , type : route , exact : true }] }]" />
         </psk-tag>
     </psk-chapter>
 </psk-page>
