--- a/pages/Components/psk-ui-loader/index.html
+++ b/pages/Components/psk-ui-loader/index.html
@@ -4,7 +4,7 @@
         </psk-ui-loader>
     </psk-tag>
 
-    <psk-toc title="PSK User Interface Loader" />
+    <psk-toc title="PSK User Interface Loader" ></psk-toc>
 
     <psk-description>
         <p>This component is intended to be used when an action is running in background (e.g. an API call) and we need to render the result of the action inside the page.</p>
