repaired index.html

--- a/pages/Components/psk-file-chooser/index.html
+++ b/pages/Components/psk-file-chooser/index.html
@@ -1,16 +1,16 @@
-<psk-page title="psk-file-chooser">
+<psk-page title="psk-files-chooser">
     <psk-tag>
-        <psk-file-chooser>
-        </psk-file-chooser>
+        <psk-files-chooser>
+        </psk-files-chooser>
     </psk-tag>
-    <psk-toc title="PSK File Chooser"></psk-toc>
+    <psk-toc title="PSK Files Chooser"></psk-toc>
 
     <psk-description>
         This component allows the user to select multiple files from his device to load them into the application providing him a customizable way to do this.
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
-        <psk-file-chooser data-define-props="true" />
+        <psk-files  -chooser data-define-props="true" />
     </psk-property-descriptor>
 
     <psk-chapter title="HTML Children">
@@ -19,7 +19,7 @@
 
     <psk-chapter title="Code Examples">
         <psk-tag>
-            <psk-file-chooser label="Select files" accept="png" />
+            <psk-files-chooser label="Select files" accept="png" />
         </psk-tag>
     </psk-chapter>
 </psk-page>
