--- a/pages/Components/psk-attachments-list/index.html
+++ b/pages/Components/psk-attachments-list/index.html
@@ -8,6 +8,7 @@
 
     <psk-description>
         <p>This component is intended to display a list of files with the possibility to download them.</p>
+        <p>You can remove them only if you created a function that removes it and passing it to removeFileFromList property</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
