--- a/pages/Components/psk-ui-loader/index.html
+++ b/pages/Components/psk-ui-loader/index.html
@@ -4,11 +4,14 @@
         </psk-ui-loader>
     </psk-tag>
 
-    <psk-toc title="PSK User Interface Loader" ></psk-toc>
+    <psk-toc title="PSK User Interface Loader"></psk-toc>
+
 
     <psk-description>
-        <p>This component is intended to be used when an action is running in background (e.g. an API call) and we need to render the result of the action inside the page.</p>
-        <p>This component should be instantiated only once per application, so it can be easily controlled by an Application Controller.
+        <p>This component is intended to be used when an action is running in background (e.g. an API call) and we need
+            to render the result of the action inside the page.</p>
+        <p>This component should be instantiated only once per application, so it can be easily controlled by an
+            Application Controller.
         </p>
         <p>By default, the loader will be hidden.</p>
     </psk-description>
