--- a/pages/Components/psk-modal/index.html
+++ b/pages/Components/psk-modal/index.html
@@ -6,7 +6,7 @@
     <psk-toc title="PSK Modal"></psk-toc>
 
     <psk-description>
-        <p>his component is intended to be used when a modal is needed in the application.</p>
+        <p>This component is intended to be used when a modal is needed in the application.</p>
         <p> This component should be instantiated only once per application, so it can be easily controlled by an Application Controller.</p>
         <p>By default, the modal will be closed and it will have no content.</p>
         <p>When the modal need to be closed, an event (closeModal) is triggered and the Application Controller should listen to this, so the modal can be closed withing the controller.</p>
@@ -20,15 +20,15 @@
     </psk-event-descriptor>
 
     <psk-chapter title="HTML Children">
-        <psk-tag>
+        <psk-tag title= "Modal Title">
             <p>Modal title - is the title that will be displayed on the modal.</p>
             <p>This is a slot inside the modal component (title) and the title will be displayed only if the slot is specified.
             </p>
         </psk-tag>
-        <psk-tag>
+        <psk-tag title = "Modal Content">
             <p>Modal Content - This is the actual content of the modal. There is a blank slot in the component, so any HTML content that will be passed without a slot name will be displayed here.</p>
         </psk-tag>
-        <psk-tag>
+        <psk-tag title = "Modal Action Container">
             <p>Modal Action Container - Is the part of the modal that will display what actions can be performed when the modal is opened.</p>
             <p>This is a slot inside the modal component (confirm_action) and the actions will be displayed only if the slot is specified.</p>
         </psk-tag>
