--- a/pages/Components/psk-pin-popup/index.html
+++ b/pages/Components/psk-pin-popup/index.html
@@ -3,7 +3,7 @@
         <psk-pin-popup>
         </psk-pin-popup>
     </psk-tag>
-
+    <psk-pin-popup opened="true"></psk-pin-popup>
     <psk-toc title="PSK Pin Popup"></psk-toc>
 
     <psk-description>
