--- a/pages/Components/psk-modal/index.html
+++ b/pages/Components/psk-modal/index.html
@@ -4,8 +4,9 @@
         </psk-modal>
     </psk-tag>
     <psk-toc title="PSK Modal"></psk-toc>
-
-    <psk-modal opened="true"></psk-modal>
+    <psk-chapter>
+        <psk-modal opened="true"></psk-modal>
+    </psk-chapter>
 
     <psk-description>
         <p>This component is intended to be used when a modal is needed in the application.</p>
