--- a/pages/Components/psk-pin-popup/index.html
+++ b/pages/Components/psk-pin-popup/index.html
@@ -3,8 +3,10 @@
         <psk-pin-popup>
         </psk-pin-popup>
     </psk-tag>
-    <psk-pin-popup opened="true"></psk-pin-popup>
     <psk-toc title="PSK Pin Popup"></psk-toc>
+    <psk-chapter>
+        <psk-pin-popup opened="true"></psk-pin-popup>
+    </psk-chapter>
 
     <psk-description>
         <p>This component is intended to be used when a PIN is required from the user.</p>
