--- a/pages/Components/psk-user-profile/index.html
+++ b/pages/Components/psk-user-profile/index.html
@@ -8,11 +8,13 @@
 
     <psk-description>
         <p>This component is intended to be used to show some user information.</p>
-        <p>By default, if no datasource is provided (userInfo), the component will emit an event (getUserInfo) in order to get desired data.</p>
+        <p>By default, if no datasource is provided (userInfo), the component will emit an event (getUserInfo) in order
+            to get desired data.</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
-        <psk-user-profile data-define-props="true" />
+        <psk-user-profile data-define-props="true">
+        </psk-user-profile>
     </psk-property-descriptor>
     <psk-event-descriptor title="Event Description">
         <psk-user-profile data-define-events="true" />
@@ -23,7 +25,10 @@
 
     <psk-chapter title="Code Example">
         <psk-tag>
-            <psk-user-profile userInfo="{{username:Aramis, email:aramis@threemusketeers.net, avatar: https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg}}" />
+            <psk-user-profile
+                userInfo="{{username:Aramis, email:aramis@threemusketeers.net, avatar: https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg}}" />
         </psk-tag>
+        <psk-user-profile
+        userInfo="{{username:Aramis, email:aramis@threemusketeers.net, avatar: https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg}}" />
     </psk-chapter>
 </psk-page>
