--- a/pages/Components/psk-wizard/index.html
+++ b/pages/Components/psk-wizard/index.html
@@ -16,8 +16,8 @@
         </psk-wizard>
     </psk-property-descriptor>
 
-    <psk-event-descriptor title="Supported properties">
-        <psk-wizard data-define-props="true">
+    <psk-event-descriptor title="Events descriptions">
+        <psk-wizard data-define-events="true">
         </psk-wizard>
     </psk-event-descriptor>
 
