--- a/pages/Components/psk-wizard/index.html
+++ b/pages/Components/psk-wizard/index.html
@@ -27,7 +27,10 @@
 
     <psk-chapter title="Code Example">
         <psk-tag>
-            <psk-wizard/>
+            <psk-wizard />
         </psk-tag>
+    </psk-chapter>
+    <psk-chapter title="Wizard Example">
+        <psk-wizard />
     </psk-chapter>
 </psk-page>
