--- a/pages/Components/psk-user-profile/index.html
+++ b/pages/Components/psk-user-profile/index.html
@@ -26,10 +26,12 @@
     <psk-chapter title="Code Example">
         <psk-tag>
             <psk-user-profile
-                userInfo="{{username:Aramis, email:aramis@threemusketeers.net, avatar: https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg}}" />
+                userInfo="{{username: 'Aramis', email:'aramis@threemusketeers.net, avatar: 'https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg'}}" />
         </psk-tag>
     </psk-chapter>
     <psk-chapter title="Default Example">
         <psk-user-profile />
+        <psk-user-profile
+            userInfo="{{username: 'Aramis', email:'aramis@threemusketeers.net, avatar: 'https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg'}}" />
     </psk-chapter>
 </psk-page>
