--- a/pages/Components/psk-user-profile/index.html
+++ b/pages/Components/psk-user-profile/index.html
@@ -29,7 +29,7 @@
                 userInfo="{{username: 'Aramis', email:'aramis@threemusketeers.net, avatar: 'https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg'}}" />
         </psk-tag>
     </psk-chapter>
-    <psk-chapter title="Default Example">
+    <psk-chapter title="User Experience Examples">
         <psk-user-profile />
         <psk-user-profile
             userInfo="{{username: 'Aramis', email:'aramis@threemusketeers.net, avatar: 'https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg'}}" />
