--- a/pages/Components/psk-page-not-found/index.html
+++ b/pages/Components/psk-page-not-found/index.html
@@ -7,10 +7,8 @@
     <psk-toc title="PSK - Page not Found - TOC"></psk-toc>
 
     <psk-description>
-        <p>This component is intended to be used inside a router component, so when the user navigates to an unknown
-            route, this component will be loaded.</p>
-        <p>This component should be instantiated everywhere in application where there is a possibility to navigate to a
-            wrong or unknown route.</p>
+        <p>This component is intended to be used inside a router component, so when the user navigates to an unknown route, this component will be loaded.</p>
+        <p>This component should be instantiated everywhere in application where there is a possibility to navigate to a wrong or unknown route.</p>
         <p>The component has the role to redirect the user to a valid route inside the application by using
             <code>basePath</code> or <code>urlDestination</code> properties.</p>
         <p>If none of these two properties are given, then a third property is checked: <code>pageRenderer</code></p>
@@ -52,56 +50,40 @@
 
     <psk-chapter title="Testing psk-list">
 
-<psk-list>
-                    <ul>
-                        <li>
-                            55A hint message will be <code>displayed</code> for the user, to know that a controller for
-                            the component is not set. 551A hint message will be displayed for the user, to know that a
-                            controller for the component is not set. 551A
-                            hint message will be displayed for the user, to know that a <code>controller</code> for the
-                            component is not set. 551A hint message will be displayed for the user, to know that a
-                            controller for the component is not set.
-                        </li>
-                        <li>
-                            55A hint message will be displayed for the user, to know <abbr
-                                title="some title">that</abbr> a controller for the component is not set. 551A hint
-                            message will be displayed for the user, to know that a controller for the component
-                            is not set. 551A hint message will be displayed for the user, to know that a controller for
-                            the component is not set. 551A hint message will be displayed for the user, to know that a
-                            controller for the component is not set.
-                        </li>
-                    </ul>
-                    <pre>asdadwasdasd</pre>
-                    <pre>asdadwasdasd</pre>
-                    <pre>asdadwasdasd</pre>
-                    <pre>asdadwasdasd</pre>
-                    <pre>asdadwasdasd</pre>
-                    <pre>asdadwasdasd</pre>
-                    <h1>asd</h1>
-                    <h2>asdasd</h2>
-                    <h3>asdasdasdasd</h3>
-                    <h4>audh98p3f9apehf9awfha9pw8fh8</h4>
-                    <pre>asdadwasdasd</pre>
-                    <address>dasdasd</address>
-                    <address>dasd123123asd</address>
-                    <address>dasdas213123asd</address>
-                    <address>da123123123123sdasd</address>
-                    <address>dasdasd</address>
-                    <address>dasdasd</address>
-                    <address>da123123sdasd</address>
-                    <address>dasda123123123123sd</address>
-                    <pre>asdadwasdasd</pre> 55A hint message will be <a href="http://sadawdasd" target="_blank"
-                        rel="noopener noreferrer">displayed</a> for the user, to know that a controller for the
-                    component is not set. 551A hint message will be displayed
-                    for the user, to know that a controller for the component is not set. 551A hint message will be
-                    displayed for the user, to know that a controller for the component is not set. 551A hint message
-                    will be displayed for the user, to know that
-                    a controller for the component is not set. 55A hint message will be displayed for the user, to know
-                    that a controller for the component is not set. 551A hint message will be displayed for the user, to
-                    know that a controller for the component
-                    is not set. 551A hint message will be displayed for the user, to know that a controller for the
-                    component is not set. 551A hint message will be displayed for the user, to know that a controller
-                    for the component is not set.
-                </psk-list>
+        <psk-list list-type='numeric'>
+            <ul>
+                <li>
+                    55A hint message will be <code>displayed</code> for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint
+                    message will be displayed for the user, to know that a <code>controller</code> for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+                </li>
+                <li>
+                    55A hint message will be displayed for the user, to know <abbr title="some title">that</abbr> a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component
+                    is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+                </li>
+            </ul>
+            <pre>asdadwasdasd</pre>
+            <pre>asdadwasdasd</pre>
+            <pre>asdadwasdasd</pre>
+            <pre>asdadwasdasd</pre>
+            <pre>asdadwasdasd</pre>
+            <pre>asdadwasdasd</pre>
+            <h1>asd</h1>
+            <h2>asdasd</h2>
+            <h3>asdasdasdasd</h3>
+            <h4>audh98p3f9apehf9awfha9pw8fh8</h4>
+            <pre>asdadwasdasd</pre>
+            <address>dasdasd</address>
+            <address>dasd123123asd</address>
+            <address>dasdas213123asd</address>
+            <address>da123123123123sdasd</address>
+            <address>dasdasd</address>
+            <address>dasdasd</address>
+            <address>da123123sdasd</address>
+            <address>dasda123123123123sd</address>
+            <pre>asdadwasdasd</pre> 55A hint message will be <a href="http://sadawdasd" target="_blank" rel="noopener noreferrer">displayed</a> for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
+            the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller
+            for the component is not set. 55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+            551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+        </psk-list>
     </psk-chapter>
 </psk-page>
