--- a/pages/Components/app-menu/index.html
+++ b/pages/Components/app-menu/index.html
@@ -7,7 +7,8 @@
 
   <psk-example>
     <header style="background: #005cbf;">
-      <app-menu />
+      <app-menu>
+      </app-menu>
     </header>
   </psk-example>
 
