--- a/pages/Components/app-menu/index.html
+++ b/pages/Components/app-menu/index.html
@@ -21,12 +21,12 @@
   </psk-description>
 
   <psk-property-descriptor title="Supported properties">
-    <app-menu define-data-props="true">
+    <app-menu data-define-props="true">
     </app-menu>
   </psk-property-descriptor>
 
   <psk-event-descriptor title="Event Description">
-    <app-menu define-data-events="true">
+    <app-menu data-define-events="true">
     </app-menu>
   </psk-event-descriptor>
 
