testing psk-table

--- a/pages/Components/psk-page-not-found/index.html
+++ b/pages/Components/psk-page-not-found/index.html
@@ -48,118 +48,13 @@
         <psk-page-not-found />
     </psk-example>
 
-    <psk-chapter title="Testing psk-list">
-
-        <psk-list list-type='numeric'>
-            <ul>
-                <li>
-                    55A hint message will be <code>displayed</code> for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint
-                    message will be displayed for the user, to know that a <code>controller</code> for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                </li>
-                <li>
-                    55A hint message will be displayed for the user, to know <abbr title="some title">that</abbr> a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component
-                    is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                    <psk-list list-type='numeric'>
-                        <ul>
-                            <li>
-                                55A hint message will be <code>displayed</code> for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not
-                                set. 551A hint message will be displayed for the user, to know that a <code>controller</code> for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is
-                                not set.
-                            </li>
-                            <li>
-                                55A hint message will be displayed for the user, to know <abbr title="some title">that</abbr> a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the
-                                component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component
-                                is not set.
-                                <psk-list list-type='numeric'>
-                                    <ul>
-                                        <li>
-                                            55A hint message will be <code>displayed</code> for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component
-                                            is not set. 551A hint message will be displayed for the user, to know that a <code>controller</code> for the component is not set. 551A hint message will be displayed for the user, to know that a controller
-                                            for the component is not set.
-                                        </li>
-                                        <li>
-                                            55A hint message will be displayed for the user, to know <abbr title="some title">that</abbr> a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller
-                                            for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller
-                                            for the component is not set.
-                                        </li>
-                                    </ul>
-                                    <pre>asdadwasdasd</pre>
-                                    <pre>asdadwasdasd</pre>
-                                    <pre>asdadwasdasd</pre>
-                                    <pre>asdadwasdasd</pre>
-                                    <pre>asdadwasdasd</pre>
-                                    <pre>asdadwasdasd</pre>
-                                    <h1>asd</h1>
-                                    <h2>asdasd</h2>
-                                    <h3>asdasdasdasd</h3>
-                                    <h4>audh98p3f9apehf9awfha9pw8fh8</h4>
-                                    <pre>asdadwasdasd</pre>
-                                    <address>dasdasd</address>
-                                    <address>dasd123123asd</address>
-                                    <address>dasdas213123asd</address>
-                                    <address>da123123123123sdasd</address>
-                                    <address>dasdasd</address>
-                                    <address>dasdasd</address>
-                                    <address>da123123sdasd</address>
-                                    <address>dasda123123123123sd</address>
-                                    <pre>asdadwasdasd</pre> 55A hint message will be <a href="http://sadawdasd" target="_blank" rel="noopener noreferrer">displayed</a> for the user, to know that a controller for the component is not set. 551A hint message
-                                    will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will
-                                    be displayed for the user, to know that a controller for the component is not set. 55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed
-                                    for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
-                                    the user, to know that a controller for the component is not set.
-                                </psk-list>
-                            </li>
-                        </ul>
-                        <pre>asdadwasdasd</pre>
-                        <pre>asdadwasdasd</pre>
-                        <pre>asdadwasdasd</pre>
-                        <pre>asdadwasdasd</pre>
-                        <pre>asdadwasdasd</pre>
-                        <pre>asdadwasdasd</pre>
-                        <h1>asd</h1>
-                        <h2>asdasd</h2>
-                        <h3>asdasdasdasd</h3>
-                        <h4>audh98p3f9apehf9awfha9pw8fh8</h4>
-                        <pre>asdadwasdasd</pre>
-                        <address>dasdasd</address>
-                        <address>dasd123123asd</address>
-                        <address>dasdas213123asd</address>
-                        <address>da123123123123sdasd</address>
-                        <address>dasdasd</address>
-                        <address>dasdasd</address>
-                        <address>da123123sdasd</address>
-                        <address>dasda123123123123sd</address>
-                        <pre>asdadwasdasd</pre> 55A hint message will be <a href="http://sadawdasd" target="_blank" rel="noopener noreferrer">displayed</a> for the user, to know that a controller for the component is not set. 551A hint message will be
-                        displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the
-                        user, to know that a controller for the component is not set. 55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that
-                        a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for
-                        the component is not set.
-                    </psk-list>
-                </li>
-            </ul>
-            <pre>asdadwasdasd</pre>
-            <pre>asdadwasdasd</pre>
-            <pre>asdadwasdasd</pre>
-            <pre>asdadwasdasd</pre>
-            <pre>asdadwasdasd</pre>
-            <pre>asdadwasdasd</pre>
-            <h1>asd</h1>
-            <h2>asdasd</h2>
-            <h3>asdasdasdasd</h3>
-            <h4>audh98p3f9apehf9awfha9pw8fh8</h4>
-            <pre>asdadwasdasd</pre>
-            <address>dasdasd</address>
-            <address>dasd123123asd</address>
-            <address>dasdas213123asd</address>
-            <address>da123123123123sdasd</address>
-            <address>dasdasd</address>
-            <address>dasdasd</address>
-            <address>da123123sdasd</address>
-            <address>dasda123123123123sd</address>
-            <pre>asdadwasdasd</pre> 55A hint message will be <a href="http://sadawdasd" target="_blank" rel="noopener noreferrer">displayed</a> for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
-            the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller
-            for the component is not set. 55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
-            551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
-        </psk-list>
+    <psk-chapter title="Testing psk-table">
+        <psk-table>
+            This will be the header | Second column | Third|Fourth |Fifth| Ok, is enought, some will be empty
+            asndlkas|asd;lka;slkdla;|alskdj;lskd|askldjalsd
+            234234234234|234234234234|23423423423423|234234234|234234|234234|234234|234234|234234|232252352352352343324|456456|456456|456456
+            scccccc|ccc|ccc|ccc|Ccc|ccc|ccc|ccc|Ccc
+            maybe we will have in mind the idea of a footer... maybe ^_^
+        </psk-table>
     </psk-chapter>
 </psk-page>
