--- a/pages/Components/app-menu/index.html
+++ b/pages/Components/app-menu/index.html
@@ -15,7 +15,7 @@
   <psk-toc title="PSK Application Menu"></psk-toc>
 
   <psk-description>
-    <p>This component is providing the app navigation.</p>
+    <p>This component is providing the application navigation.</p>
     <p> It can change itself to a hamburger menu when the width of the
       page is smaller than a given property.</p>
   </psk-description>
