--- a/pages/Components/app-menu/index.html
+++ b/pages/Components/app-menu/index.html
@@ -5,7 +5,7 @@
     </app-menu>
   </psk-tag>
 
-  <psk-example>
+  <psk-example title="Live Example">
     <header style="background: #005cbf;">
       <app-menu>
       </app-menu>
