--- a/pages/Components/psk-pin-popup/index.html
+++ b/pages/Components/psk-pin-popup/index.html
@@ -36,8 +36,8 @@
             <psk-pin-popup opened="true"></psk-pin-popup>
         </psk-tag>
     </psk-chapter>
-    
-    <psk-example>
+
+    <psk-example title= "Live Example">
         <psk-pin-popup opened="true"></psk-pin-popup>
     </psk-example>
 
