--- a/pages/Components/psk-pin-popup/index.html
+++ b/pages/Components/psk-pin-popup/index.html
@@ -39,6 +39,7 @@
 
     <psk-example title= "Live Example">
         <psk-pin-popup opened="true"></psk-pin-popup>
+        <p>You can see this pin-pop-up example everytime you enter or refresh this page!</p>
     </psk-example>
 
 </psk-page>
