--- a/pages/Components/psk-pin-popup/index.html
+++ b/pages/Components/psk-pin-popup/index.html
@@ -37,9 +37,9 @@
         </psk-tag>
     </psk-chapter>
 
-    <psk-example title= "Live Example">
+    <psk-chapter title= "Live Example">
         <psk-pin-popup opened="true"></psk-pin-popup>
         <p>You can see this pin-pop-up example everytime you enter or refresh this page!</p>
-    </psk-example>
+    </psk-chapter>
 
 </psk-page>
