--- a/pages/Components/psk-ui-loader/index.html
+++ b/pages/Components/psk-ui-loader/index.html
@@ -29,6 +29,6 @@
         </psk-tag>
     </psk-chapter>
     <psk-chapter title="Live Example">
-        <psk-ui-loader shouldBeRendered="true" />
+        <psk-ui-loader shouldBeRendered=true />
     </psk-chapter>
 </psk-page>
