--- a/pages/Components/psk-ui-loader/index.html
+++ b/pages/Components/psk-ui-loader/index.html
@@ -28,7 +28,7 @@
             <psk-ui-loader shouldBeRendered="true" />
         </psk-tag>
     </psk-chapter>
-    <psk-chapter title="Live Example">
-        <psk-ui-loader shouldBeRendered=true />
-    </psk-chapter>
+    <psk-example title="Live Example">
+        <psk-ui-loader shouldBeRendered="true" />
+    </psk-example>
 </psk-page>
